게시판 화면 코딩 및 로그인 화면 처리(진행중)

--- a/src/components/shared/ui/board/board-list.module.css
+++ b/src/components/shared/ui/board/board-list.module.css
@@ -2,3 +2,15 @@
 }
 .board-pagination {
 }
+.board-a {
+    color: #019ebf;
+    text-decoration: underline !important;
+}
+.ag-header-cell-label {
+    justify-content: center;
+}
+.ag-header-cell.text-center {
+    .ag-header-cell-label {
+        justify-content: center;
+    }
+}
